<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="rohksin.com.searchviewdemo.MainActivity">
    <item
        android:id="@+id/searchBar"
        app:showAsAction="always|collapseActionView"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
</menu>